# Testing_Network_Lab

./: README.md  build.sh  build_and_start.sh  connect-attacker.bat  connect-openwrt.bat  connect-sip-server.bat  docker-compose.yaml  open-windows.sh  rebuild.sh  start.ps1  start.sh  status.sh  stop.sh
Linux/: .dockerignore  start.sh  (+2 more)
shared/StormShadow_Test/: Makefile  README.md  pyproject.toml  requirements.txt  stormshadow.spec
shared/StormShadow_Test/configs/: sip-stormshadow-config.yaml
shared/StormShadow_Test/docs/html/: genindex.html  gui.html  gui.utils.html  index.html  main.html  objects.inv  py-modindex.html  utils.attack.html  utils.html  utils.interfaces.html  utils.network.html  utils.registry.html
shared/StormShadow_Test/gui/: README.md  __init__.py
shared/StormShadow_Test/gui/components/: lab_panel.py
shared/StormShadow_Test/gui/managers/: __init__.py
shared/StormShadow_Test/gui/utils/: command_utils.py  gui_lab_manager.py  terminal_sudo.py
shared/StormShadow_Test/sip-lab/sip_server/: entrypoint.sh
shared/StormShadow_Test/sip_attacks/: sip_spoofing.py  spoofer.py
shared/StormShadow_Test/utils/: lab_manager.py
shared/StormShadow_Test/utils/attack/: AttackSession.py  __init__.py  attack_enums.py  attack_modules_finder.py
shared/StormShadow_Test/utils/config/: __init__.py  config.py  config_manager.py
shared/StormShadow_Test/utils/core/: __init__.py  command_runner.py  console_window.py  logs.py  tty_terminal.py
shared/StormShadow_Test/utils/interfaces/: __init__.py
shared/StormShadow_Test/utils/network/: __init__.py  iptables.py
(+105 files in other folders)
