[project]
name = "Stormshadow"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "ifaddr>=0.2.0",
    "netfilterqueue>=1.1.0",
    "netifaces>=0.11.0",
    "netifaces2>=0.0.22",
    "pyyaml>=6.0.2",
    "scapy>=2.6.1",
    "uvicorn>=0.35.0",
    # Optional helpers used or referenced in the codebase
    "colorama>=0.4.6",            # ANSI color support on Windows (referenced in logs.py comment)
    "typing-extensions>=4.5.0",  # backports for newer typing features on older Pythons
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "sphinx>=7.4",
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx-copybutton>=0.5.2",
]
